# german-noun-classification

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  decision_tree_ccp_model.pkl  decision_tree_model.pkl  deutschnouns.py  freq_analysis.py  germannouns.py  index.html  messing_around.py  model_germannouns.py  pyproject.toml  requirements.txt  script.js  syllable-breakdown.py  urls.py
create_ngram.py/: __init__.py
scripts/: predict.py  train.py
src/germannouns/: __init__.py  config.py
src/germannouns/data/: __init__.py  feature_engineering.py  loader.py
src/germannouns/model/: __init__.py  predictor.py  trainer.py
src/germannouns/utils/: __init__.py  core.py
static/: styles.css
tests/: conftest.py  test_core.py  test_data.py  test_germannouns.py  test_model.py
web/: app.py  requirements.txt
web/templates/: index.html
